# openxla-pjrt-plugin

high-level-opt/: BUILD.bazel
high-level-opt/src/openxla/high-level-opt/: FusionPipeline.cpp  FusionPipeline.h  LayoutPipeline.cpp  LayoutPipeline.h  Main.cpp
