# Copyright 2023 The OpenXLA Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

cc_library(
    name = "layout_pipeline",
    srcs = [
        "src/openxla/high-level-opt/LayoutPipeline.cpp",
    ],
    hdrs = [
        "src/openxla/high-level-opt/LayoutPipeline.h",
    ],
    copts = [
        # TODO: File issue against XLA team: for deprecations in
        # external/xla/xla/comparison_util.h
        "-Wno-deprecated-declarations",
        "-Wno-defaulted-function-deleted",
    ],
    includes = ["src"],
    deps = [
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:Transforms",
        "@xla//xla/mlir_hlo",
        "@xla//xla/hlo/transforms:hlo_constant_splitter",
        "@xla//xla/mlir_hlo:hlo_legalize_to_stablehlo",
        "@xla//xla/mlir_hlo:mhlo_passes",
        "@xla//xla/mlir_hlo:stablehlo_legalize_to_hlo",
        "@xla//xla/service/gpu:gpu_layout_assignment",
        "@xla//xla/service:layout_normalization",
        "@xla//xla/service:algebraic_simplifier",
        "@xla//xla/service:flatten_call_graph",
        "@xla//xla/service:reshape_decomposer",
        "@xla//xla/service:reduce_decomposer",
        "@xla//xla/service:transpose_folding",
        "@xla//xla/service:hlo_module_config",
        "@xla//xla/service:hlo_pass_pipeline",
        "@xla//xla/service/gpu:gpu_conv_rewriter",
        "@xla//xla/translate/hlo_to_mhlo:hlo_to_mlir_hlo",
        "@xla//xla/translate/mhlo_to_hlo:mlir_hlo_to_hlo",
    ],
)

cc_library(
    name = "fusion_pipeline",
    srcs = [
        "src/openxla/high-level-opt/FusionPipeline.cpp",
    ],
    hdrs = [
        "src/openxla/high-level-opt/FusionPipeline.h",
    ],
    copts = [
        # TODO: File issue against XLA team: for deprecations in
        # external/xla/xla/comparison_util.h
        "-Wno-deprecated-declarations",
        "-Wno-defaulted-function-deleted",
    ],
    includes = ["src"],
    deps = [
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:Transforms",
        "@xla//xla/mlir_hlo:hlo_legalize_to_stablehlo",
        "@xla//xla/mlir_hlo",
        "@xla//xla/mlir_hlo:mhlo_passes",
        "@xla//xla/mlir_hlo:stablehlo_legalize_to_hlo",
        "@xla//xla/service:algebraic_simplifier",
        "@xla//xla/service:hlo_constant_folding",
        "@xla//xla/service:hlo_dce",
        "@xla//xla/service:hlo_cse",
        "@xla//xla/service/gpu:multi_output_fusion",
        "@xla//xla/service/gpu:fusion_merger",
        "@xla//xla/service/gpu:instruction_fusion",
        "@xla//xla/service/gpu:gpu_hlo_schedule",
        "@xla//xla/service:hlo_module_config",
        "@xla//xla/service:hlo_pass_pipeline",
        "@xla//xla/service/gpu:gpu_conv_rewriter",
        "@xla//xla/translate/hlo_to_mhlo:hlo_to_mlir_hlo",
        "@xla//xla/translate/mhlo_to_hlo:mlir_hlo_to_hlo",
    ],
)

cc_binary(
    name = "openxla_high_level_opt",
    srcs = [
        "src/openxla/high-level-opt/Main.cpp",
    ],
    deps = [
        ":layout_pipeline",
        ":fusion_pipeline",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@stablehlo//:register",
        "@xla//xla/mlir_hlo:hlo_dialect_registration",
    ],
)

